--- a/accounts/templates/mypage.html
+++ b/accounts/templates/mypage.html
@@ -58,7 +58,6 @@
             opacity: 0.7;
         }
         .menu {
-            margin-top: 20px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             padding: 15px;
         }
@@ -99,6 +98,9 @@ div#menu-toggle {
     justify-content: center;
     gap: 20px;
     align-items: center;
+}
+.hamburger {
+    position: static;
 }
 </style>
 {% endblock body %}
