--- a/search_app/templates/exhibited_list.html
+++ b/search_app/templates/exhibited_list.html
@@ -43,5 +43,27 @@
     div#menu-toggle {
         display: none;
     }
+    @media (max-width: 992px) {
+        ul.list-group {
+            grid-template-columns: repeat(3, 1fr);
+        }
+    }
+
+    @media (max-width: 768px) {
+        ul.list-group {
+            grid-template-columns:repeat(2, 1fr);
+        }
+        
+    }
+
+    @media (max-width: 500px) {
+        ul.list-group {
+            height: fit-content;
+        }
+    }
+    .hamburger {
+        position: static;
+    }
+        
 </style>
 {% endblock body %}
