スタイル修正

--- a/accounts/templates/mypage.html
+++ b/accounts/templates/mypage.html
@@ -102,5 +102,15 @@ div#menu-toggle {
 .hamburger {
     position: static;
 }
+.container{
+    width: 80%;
+    height: 100%;
+}
+footer.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
 </style>
 {% endblock body %}
