--- a/templates/base.html
+++ b/templates/base.html
@@ -200,10 +200,7 @@
             text-align: center;
             padding: 10px;
             flex-shrink: 0;
-        }
-
-        .container.mt-5{
-            height: 100vh;
+            margin-top: 62px;
         }
 
         
